--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
 	"author" : "enter your name here",
 	"main" : "filename-of-main-script.js",
 	"scripts" : {
-		"start" : "node filename-of-start-script.js"
+		"start" : "node nodeaufg10.js"
 	},
 	"engines" : {
-		"node" : "5.8.0"
+		"node" : "6.10.2"
 	},
 	"dependencies" : {
 	}
